--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,53 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+.book-shelf-rating {
+  font-family: 'Josefin Sans';
+  padding: 10px;
+  color: #806600;
+  position: absolute;
+  text-align: center;
+  right: -10px;
+  bottom: 170px;
+  width: 40px;
+  height: 40px;
+  background-image: url('./icons/Gold_Star.svg.png');
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.rating-book {
+  margin: 10px;
+}
+
+.rating-book-star  {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+  border: 2px solid black;
+}
+
+.rating-book-star p {
+  font-family: 'Josefin Sans';
+  margin: 20px;
+  color: #806600;
+  text-align: center;
+  right: -10px;
+  width: 40px;
+  height: 40px;
+  background-image: url('./icons/White-star-icon-13.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  cursor: pointer;
+}
+
+.rating-book-star p:hover {
+  background-image: url('./icons/Gold_Star.svg.png');
+}
